--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,5 +1,5 @@
 # ! ATTENDANCE APP
-# REACT_APP_BASEURL= http://192.168.0.135:4444/
+# REACT_APP_BASEURL= http://localhost:4444/
 
 # ! USECASE APP
 
@@ -7,4 +7,4 @@
 
 # ! localhost
 REACT_APP_BASEURL= http://localhost:8000
-# REACT_APP_BASEURL= http://attuse1.com:8000
+# REACT_APP_BASEURL= http://attuse1.com:8000    
