--- a/Backend/.env
+++ b/Backend/.env
@@ -13,7 +13,7 @@ EMAIL_USERNAME=noreply.pozent@gmail.com
 EMAIL_API_PASSWORD=wbov gqrr uyvz sfmk
 # EMAIL_USERNAME=noreply.pozent@gmail.com
 # EMAIL_API_PASSWORD=Talent123@hub
-# FORGET_PASSWORD_LINK=http://192.168.0.135:88/reset/?token=    
-FORGET_PASSWORD_LINK=http://localhost:3000/reset/?token= 
-APP_LINK=http://localhost:3000
-# APP_LINK=http://192.168.0.135:88
+# FORGET_PASSWORD_LINK=http://localhost:88/reset/?token=    
+FORGET_PASSWORD_LINK=http://localhost:88/reset/?token= 
+APP_LINK=http://localhost:88
+# APP_LINK=http://localhost:88
