--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
     "react-timezone-select": "^3.2.5",
     "react-toastify": "^10.0.5",
     "semantic-ui-react": "^2.1.5",
+    "styled-components": "^6.1.12",
     "sweetalert2": "^11.10.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
